# bblaser

./: .gitignore  README.md  nginx_bb_laser.conf  nginx_bb_laser_local.conf  setup.sh  start_project.sh
bblaser-arm/: .gitignore  CMakeLists.txt  README.md  bb_setup.sh  requests-bb.http  requests.http  start.sh
bblaser-arm/canvas/: index.html
bblaser-arm/docs/: spidev_test.c.txt
bblaser-arm/resources/gpios/gpio15/: value
bblaser-arm/resources/gpios/gpio48/: value
bblaser-arm/resources/gpios/gpio60/: value
bblaser-arm/src/: gpio.cpp  laser.cpp  laser.h  lifeline_resource.cpp  lifeline_resource.h  line.cpp  line.h  lines_player.cpp  lines_player.h  log.cpp  log.h  main.cpp  player_resource.cpp  player_resource.h  point.cpp  point.h  rest.cpp  spi.cpp  spi.h  websocket_handshake.h
bblaser-arm/src/domain/: color.cpp  color.h  defines.h  drawing.cpp  drawing.h  font.h  laser.cpp  laser.h  line.cpp  matrix3.cpp  matrix3.h  point.cpp  point.h  segment.cpp  segment.h  settings.cpp  settings.h
bblaser-arm/src/io/: gpio.cpp  gpio.h  io.h  spi.cpp  spi.h
bblaser-arm/src/rest/: hello_resource.cpp  hello_resource.h  lifeline_resource.cpp  lifeline_resource.h  player_resource.cpp  player_resource.h  rest.cpp  rest.h  rest_resource.h  settings_resource.cpp  settings_resource.h  websocket_handshake.cpp  websocket_handshake.h
bblaser-service/: pom.xml  requests.http
bblaser-service/src/main/resources/: application.properties
bblaser-web/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  tslint.json
bblaser-web/e2e/src/: app.e2e-spec.ts
bblaser-web/src/: custom-theme.scss  index.html  polyfills.ts  properties.scss  styles.scss
bblaser-web/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  endpoints.service.ts  event.service.ts  material.module.ts
bblaser-web/src/app/animations/: animation.service.ts  animations.module.ts
bblaser-web/src/app/animations/animation-canvas/: animation-canvas.component.spec.ts  (+1 more)
bblaser-web/src/app/animations/animation-canvas-settings/: animation-canvas-settings.component.spec.ts  animation-canvas-settings.component.ts
bblaser-web/src/app/edit-value/: edit-value.component.html  edit-value.component.spec.ts  edit-value.component.ts
bblaser-web/src/app/header/: header.component.ts
bblaser-web/src/app/laser/: index.ts  laser.action.ts  laser.reducer.ts  laser.selector.ts
bblaser-web/src/app/paper/: index.ts  paper.actions.ts  paper.service.ts
bblaser-web/src/app/radial-color-picker/: radial-color-picker.module.ts  radial-color-rotator.directive.ts
bblaser-web/src/app/sequences/: sequences.module.ts
bblaser-web/src/app/settings-dialog/: settings-dialog.component.ts
bblaser-web/src/app/store/: bblaser.action.ts  bblaser.selectors.ts
bblaser-web/src/app/timeline/: timeline.component.html  timeline.component.scss  timeline.component.ts  timeline.module.ts
bblaser-web/src/app/timeline-effects/: color-gradient-effect.component.ts  shape-move-effect.component.ts  shape-rotate-effect.component.ts
bblaser-web/src/assets/images/: bblaser.xcf
old_web/: README.md  angular.json  package-lock.json  package.json
old_web/src/: index.html  styles.scss
old_web/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts  bb-laser.scss  endpoints.service.ts  material.module.ts
old_web/src/app/animations/: animations.module.ts
old_web/src/app/edit-value/: edit-value.component.spec.ts  edit-value.component.ts  edit-value.module.ts
old_web/src/app/header/: header.component.ts
old_web/src/app/laser/: index.ts  laser.effects.ts  laser.reducer.ts
old_web/src/app/paper/: paper.reducers.ts  paper.selectors.ts  paper.service.ts
old_web/src/app/radial-color-picker/: radial-color-gradient.directive.spec.ts  radial-color-gradient.directive.ts  radial-color-picker.module.ts  radial-color-rotator.directive.spec.ts
old_web/src/app/sequences/: sequences.module.spec.ts
old_web/src/app/settings-dialog/: settings-dialog.component.ts
old_web/src/app/store/: bblaser.reducers.ts  index.ts
old_web/src/app/timeline/: timeline.component.ts
old_web/src/app/timeline-effects/: effect.service.ts  shape-resize-effect.component.ts
old_web/src/assets/i18n/: en.json
(+139 files in other folders)
